# ros-melodic-ronin-py

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: ronin_circle_test.launch  ronin_vet_horse.launch
src/: circle_test_source.py  model_resnet1d.py  ronin.py
src/circle-test-source/: CMakeLists.txt  package.xml
src/circle-test-source/scripts/: talker.py
src/ros-melodic-ronin-py/: CMakeLists.txt  package.xml
src/ros-melodic-ronin-py/launch/: ronin_circle_test.launch
src/ros-melodic-ronin-py/scripts/: model_resnet1d.py  ronin.py
