<?xml version="1.0"?>
<package format="2">
  <name>ros-melodic-ronin-py</name>
  <version>1.0.0</version>
  <description>The ros-melodic-ronin-py package</description>
  <maintainer email="balazs@nowtech.hu">Balazs Bamer</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/nowtechnologies/ros-melodic-ronin-py</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
